# openai_helper

./: .gitignore  README.md  pyproject.toml  python_exec.py  quickstart.py  quickstart_cli.py  requirements.txt
openai_helper/: __init__.py  chat.py  function_call.py
