[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "openai_helper"
version = "0.1.0"
description = "A helper library for OpenAI."
authors = ["Yibo Wei david_wyb2001@outlook"]
license = "MIT"
readme = "README.md"

[project.urls]
Home = "https://github.com/Microwave-WYB/openai_helper"

