[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "openai_helper"
version = "0.1.0"
description = "A helper library for OpenAI."
authors = [{"name" = "Yibo Wei", "email" = "david_wyb2001@outlook.com"}]
license = { text = "MIT" }
readme = "README.md"

[project.urls]
Home = "https://github.com/Microwave-WYB/openai_helper"

