[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "openai_helper"
version = "2023.12.07"
description = "A helper library for OpenAI."
authors = [{"name" = "Yibo Wei", "email" = "david_wyb2001@outlook.com"}]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.1"
]

[project.urls]
Home = "https://github.com/Microwave-WYB/openai_helper"

